--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
           <button class="dash_button sm secondary" id="btnZoomFit" style="margin-left:4px">Fit</button>
         </div>
         <div class="pxl-preview-wrap" id="pxlPreviewWrap">
-          <canvas id="pxlCanvas" style="display:none"></canvas>
+          <div class="pxl-preview-inner" id="pxlPreviewInner">
+            <canvas id="pxlCanvas" style="display:none"></canvas>
+          </div>
           <div class="pxl-preview-placeholder" id="pxlPlaceholder">Adjust controls to generate preview</div>
           <div class="pxl-processing pxl-hidden" id="pxlProcessing">Processing&hellip;</div>
         </div>
